fix gaps

--- a/src/components/TestimonialSlider/style.css
+++ b/src/components/TestimonialSlider/style.css
@@ -4,16 +4,24 @@
 .left_side{
     padding:20px;
 }
-.tabs{
+/* .tabs{
     margin-top:30px;
-}
+} */
 .left{
     padding:20px
 }
+/* .testimo{
+    padding:10px 0px 
+} */
+
 .testimo{
-    padding:50px 0px 
+    padding: 20px;
 }
 
 .mbb{
     margin-bottom: 30px;
+}
+
+.testimo{
+    margin-bottom: 60px;
 }
